# Course_project_1

./: README.md  pyproject.toml
data/: operations.xlsx
logs/: log_file.json
src/: logger.py  main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_utils.py  test_views.py
